<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sim_control</name>
  <version>0.0.0</version>
  <description>Gazebo plugins to have better control of the simulation.</description>
  <maintainer email="franco.fusco@ls2n.fr">Franco FUSCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/plugins??" /> -->
  </export>

</package>
